src/objects/RWE_Data_Asset__c.object
<CustomObject>
    <description>RWE Data Assets</description>
    <fields>
        <fullName>Access_Method__c</fullName>
        <label>Access Method</label>
        <picklist>
            <picklistValues>
                <fullName>Data Mart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Provider</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Access_for_In_House_Analysis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Access for In-House Analysis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aggregated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aggregated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asset_Status__c</fullName>
        <description>This is the status of the RWE Data Asset after it is loaded on to the platform.</description>
        <label>Asset Status</label>
        <picklist>
            <picklistValues>
                <fullName>Under Legal Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under License Review</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asset_Type__c</fullName>
        <description>This is added for the demo</description>
        <label>Asset Type</label>
        <picklist>
            <picklistValues>
                <fullName>Produced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utilized</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Primary__c</fullName>
        <label>Business Unit (Primary)</label>
        <picklist>
            <picklistValues>
                <fullName>Biomedicines (LBM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology (OBU)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes (DBU)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMBU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elanco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Business Unit Specific</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Claims_Type__c</fullName>
        <label>Claims Type</label>
        <picklist>
            <picklistValues>
                <fullName>Medicare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government (OUS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Clinical_Efficacy_Measure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clinical Efficacy Measure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contains_AE_s__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contains AE(s)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count_Studies__c</fullName>
        <label>Count Studies</label>
        <summaryForeignKey>Junction_Data_Asset_Study__c.RWE_Data_Asset__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Create_Cohort__c</fullName>
        <label>Create Cohort</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Asset_ID__c</fullName>
        <description>This is a RWE Data Asset ID unique for every record of the object.</description>
        <displayFormat>{YYYY}-{0000}</displayFormat>
        <label>Data Asset ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Data_Asset_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Asset Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>RWE Data Assets</relationshipLabel>
        <relationshipName>RWE_Data_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Continuity__c</fullName>
        <label>Data Continuity</label>
        <picklist>
            <picklistValues>
                <fullName>Longitudinal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross-Sectional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Sales_Amount__c</fullName>
        <description>This is test field added for the demo.</description>
        <label>Data Sales Amount (Billions)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Data_Subscription_Cost__c</fullName>
        <label>Data Subscription Cost (Millions)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Data_Type__c</fullName>
        <label>Data Type</label>
        <picklist>
            <picklistValues>
                <fullName>Administrative Claims Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic Medical Records (EMR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chart Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Demographics__c</fullName>
        <label>Demographics</label>
        <picklist>
            <picklistValues>
                <fullName>Age</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Race / Ethnicity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geographic Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Diagnosis_Coding__c</fullName>
        <label>Diagnosis Coding System</label>
        <picklist>
            <picklistValues>
                <fullName>ICD-9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICD-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>READ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SNO MED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Disease_Severity_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disease Severity Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disease_if_specific__c</fullName>
        <label>Disease (if specific)</label>
        <picklist>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asthma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiovascular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cirrhosis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congenital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COPD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COPD/Asthma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cystic Fibrosis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dental Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dermatology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Down Syndrome</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heart failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyperlipidemia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infectious</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple Sclerosis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non specified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non TA specific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perinatal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PsA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psoriasis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psychiatry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renal disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stroke</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transplantation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enrollment__c</fullName>
        <label>Enrollment</label>
        <picklist>
            <picklistValues>
                <fullName>1 - 10K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10001 - 100K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100001 - 1M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1M - 2M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2M - 5M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5M - 10M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10M - 25M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 25M</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Evaluation_Rating__c</fullName>
        <label>Evaluation Rating</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Franchise_Function__c</fullName>
        <label>Franchise / Function</label>
        <picklist>
            <picklistValues>
                <fullName>I&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Respiratory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety &amp; Epidemiology</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HL_Disease__c</fullName>
        <label>HL Disease</label>
        <picklist>
            <picklistValues>
                <fullName>Disease Specific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Specified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non TA Specific</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lab_Coding_System__c</fullName>
        <label>Lab Coding System</label>
        <picklist>
            <picklistValues>
                <fullName>LOINC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JLAC 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lab_Values_Availability__c</fullName>
        <label>Lab Values Availability</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Medical_Reports__c</fullName>
        <label>Medical Reports Availablility</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Medical__c</fullName>
        <label>Biobank Availability</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mortality_Data_Availability__c</fullName>
        <label>Mortality Data Availability</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Open_Cohort__c</fullName>
        <label>Open Cohort</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Owned_or_Sourced__c</fullName>
        <label>Owned or Sourced</label>
        <picklist>
            <picklistValues>
                <fullName>Owned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sourced from Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sourced from Third Party</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payer_Reimbursement__c</fullName>
        <description>This is a test field added for the demo</description>
        <label>Payer Reimbursement (Billions)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Raw_Data_Accessibility__c</fullName>
        <label>Raw Data Accessibility</label>
        <picklist>
            <picklistValues>
                <fullName>Externally Accessible via Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Externally Hosted - Vendor Directly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Externally Hosted - Vendor via Data Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Externally Hosted - Third Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner - Analysis by Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Institution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global [Multiple Regions]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unspecified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Setting__c</fullName>
        <label>Setting</label>
        <picklist>
            <picklistValues>
                <fullName>Ambulatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsored by Pharma</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Theraputic_Area__c</fullName>
        <description>This is a list of the therapeutic areas</description>
        <label>Therapeutic Area</label>
        <picklist>
            <picklistValues>
                <fullName>Cardio Metabolic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Respiratory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neuroscience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immunology and Dermatology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cell and Gene Therapy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>RWE Data Asset</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Data_Steward_RWE_Data_Asset</fullName>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Asset_Status__c</field>
            <operation>contains</operation>
            <value>Under Legal Review</value>
        </filters>
        <label>License Reviewer</label>
        <language>en_US</language>
        <queue>License_Reviewer</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Legal_review_RWE_Data_Asset</fullName>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Asset_Status__c</field>
            <operation>equals</operation>
            <value>Under Legal Review</value>
        </filters>
        <label>Legal Review</label>
        <language>en_US</language>
        <queue>Legal_review</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Data Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RWE Data Assets</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>